Programmability
    Simplified project specific login procedures (#298)
    Projects can allow organizations to look into each others tokens and tracks (#300)
    Upgrade Compatibility Checks for deprecated project code (#269)
Security
    CSV Injection protection
    Enhanced parameter filtering for added security (#298)
    Enhanced password hashing (#177, #209, #257)
    Two factor authentication for users (#237)
Track Builder
    Conditions (on track fields) can be set for rounds (#42)
    Extended Open Rosa support including for nested rows and survey answering
    Organizations can share tracks and tokens (#300)
    Track can be created from appointments even when an odler track is open (#294)
    When redoing a survey, the answers are injected before answering instead of during replacement (#301)

1.8.2 => 1.8.3
=================
Automatic mail
    Email can now also be sent x days before survey expiry

1.8.1 => 1.8.2
=================
New features:
    You can change the organization(s) a patient belongs to (and move his/her tracks)
    Correct token button added to menu
    Memo field type for tracks
    (Re)import imported files
Automatic mail
    Preview option for automatic mailjobs
    Automatic mailjobs can now filter for relations, check your jobs!
    Automatic mail execution can be logged to file when set in the project.ini
Interface improvements:
    When a token is corrected links are visible when seeing the token to open the original / copy
    Improved interface for communication templates and automatic mail
    The Contact => Bugs and GemsTracker pages have been refreshed with a default bugs url (use Roles to make invisible)
    Editing staff and organizations uses extra defaults for smoother creation
    Different respondent search, edit and show screens can be set for a user group
    Different respondent edit and show screens can be set for each organization, overruling user group settings