@@ -323,6 +323,24 @@ layoutPrepareArgs.localeSet.class     = leftFloat col-sm-2
 layoutPrepareArgs.organizationSwitcher.class = col-sm-3
 
 ;----------------------------------------------------------------------
+; LDAP SECTION
+;----------------------------------------------------------------------
+;
+; See https://docs.zendframework.com/zend-authentication/adapter/ldap/
+; for settings, the specified examples works for Active Directory
+;
+; At least one server array should be specified, bindings are tested
+; in order. Activates LDAP option on Organisation and user level.
+;----------------------------------------------------------------------
+
+;ldap.server1.host                   = mw120.magnafacta.info
+;ldap.server1.accountCanonicalForm   = 3
+;ldap.server1.accountDomainName      = magna.magnafacta.info
+;ldap.server1.accountDomainNameShort = Magna
+;ldap.server1.baseDn                 = "DC=magna,DC=magnafacta,DC=info"
+;ldap.server1.bindRequiresDn         = 0
+
+;----------------------------------------------------------------------
 ; LOCALE SECTION
 ;----------------------------------------------------------------------
 ;
